creation balise schema.org

--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@
           </ul>
         </nav>
       </header>
+      <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type":"LocalBusiness",
+          "name": "Nina Carducci",
+          "address":{
+            "@type": "PostalAddress",
+            "streetAddress": "68 avenue Alace-Lorraine",
+            "addressLocality": "Bordeaux",
+            "postalCode":"33200",
+            "addressCountry":"FR"
+          },
+          "telephone": "+33 5 5667 78 89",
+          "openingHours": "Mo-Fr 10:00-19:00",
+          "url":"https://github.com/magali24130/Nina-Carducci.git"
+        }
+      </script>
     <main>
       <div id="header">
         <div
