--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         rel="stylesheet"
       />
 
-      <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
-      <link rel="stylesheet" href="./assets/style.css" />
+      <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+      <link rel="stylesheet" href="./assets/style.min.css" />
      
         <!-- Meta donnés pour Facebokk -->
       <meta property="og:title" content="Nina Carducci, Photographe professionnnelle à Bordeaux" />
@@ -120,25 +120,39 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
+              <picture>
+                <source srcset="./assets/images/slider/ryoji-iwata-Mobile.webp"
+                media="(max-width:768px)"
+                />
               <img
                 src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
                 class="d-block w-100"
-                alt="..."
-              />
+                alt="homme qui marche sur un passage piéton"
+                />
+              </picture>
             </div>
             <div class="carousel-item">
-              <img
+              <picture>
+                <source srcset="./assets/images/slider/nicholas-green-Mobile.webp"
+                media="(max-width:768px)"/>
+                <img
                 src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
                 class="d-block w-100"
-                alt="..."
+                alt="public"
+                
               />
+              </picture>
             </div>
             <div class="carousel-item">
+              <picture>
+                <source srcset=".assets/images/slider/edward-cisneros-Mobile.webp"
+                media="(max-width:768px)"/>
               <img
                 src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
                 class="d-block w-100"
-                alt="..."
-              />
+                alt="mariés qui s'embrasse"
+                />
+              </picture>
             </div>
           </div>
           <button
@@ -199,37 +213,37 @@
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
-              src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
+              src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
               alt="Portrait d'un entrepreuneur prise par Ali Morshedlou"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
-              src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+              src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
               alt="Photo d'une réunion prise par Jason Goodman"
             />
             <img
               data-gallery-tag="Mariages"
               class="gallery-item"
-              src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+              src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
               alt="Photo des mains d'un couple prise par Hannah Busing"
             />
             <img
               data-gallery-tag="Portrait"
               class="gallery-item"
-              src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+              src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
               alt="Portrait d'un homme prise par Ade Tunji"
             />
             <img
               data-gallery-tag="Mariages"
               class="gallery-item"
-              src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+              src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
               alt="Photo des mariés prise par Jakob Owens"
             />
             <img
               data-gallery-tag="Portrait"
               class="gallery-item"
-              src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
+              src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
               alt="Portrait d'une femme prise par Nino Van Prattenburg"
             />
             <img
@@ -241,7 +255,7 @@
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
-              src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
+              src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
               alt="Photo d'une femme face a son ordinateur prise par Mateus Campos"
             />
           </div>
