--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           },
           "telephone": "+33 5 5667 78 89",
           "openingHours": "Mo-Fr 10:00-19:00",
-          "url":"https://github.com/magali24130/Nina-Carducci.git"
+          "url":"https://github.com/magali24130/Nina-Carducci.git",
           "priceRang: entre 50 et 400€"
         }
       </script>
