--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
       
-      <meta name="description" content="Nina Carducci, photographe professionnnel">
+      <meta name="description" content="Nina Carducci, photographe professionnnelle à Bordeaux">
       
       <meta name="keywords" content="photographe, service photo, retouche photo, album photo, mariage, fêtes, naissance">
       <title>Nina Carducci Photographe professionnelle à Bordeaux</title>
@@ -286,11 +286,11 @@
         </div>
       </div>
       <div id="services">
-        <h1 class="title">Mes services</h1>
+        <h2 class="title">Mes services</h2>
         <div class="container">
           <div class="service">
             <div class="service__description">
-              <h1>Shooting photo</h1>
+              <h2>Shooting photo</h2>
               <p>
                 Pour capturer vos moments les plus précieux et garder un
                 souvenir impérissable. Je me déplace en Île-de-France pour
@@ -298,13 +298,13 @@
               </p>
             </div>
             <div class="service__price">
-              <h2>350€/demi journée</h2>
+              <h3>350€/demi journée</h3>
               <span>Matériel, déplacement inclus</span>
             </div>
           </div>
           <div class="service">
             <div class="service__description">
-              <h1>Retouches</h1>
+              <h2>Retouches</h2>
               <p>
                 Vous souhaitez retoucher vos photos pour un résultat
                 professionnel ? Bénéficier d’un rendu optimal pour vos
@@ -312,20 +312,20 @@
               </p>
             </div>
             <div class="service__price">
-              <h2>50€/photo</h2>
+              <h3>50€/photo</h3>
               <span>2 AR par photo</span>
             </div>
           </div>
           <div class="service">
             <div class="service__description">
-              <h1>Album photos</h1>
+              <h2>Album photos</h2>
               <p>
                 Partagez avec vos proches et vos clients les photos des moments
                 partagés ensemble à travers un album photo personnalisé
               </p>
             </div>
             <div class="service__price">
-              <h2>400€ album A4</h2>
+              <h3>400€ album A4</h3>
               <span>30 pages recto/verso</span>
             </div>
           </div>
