rajout image nina

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             "postalCode":"33200",
             "addressCountry":"FR"
           },
+          "image":"./assets/images/nina.webp",
           "telephone": "+33 5 5667 78 89",
           "openingHours": "Mo-Fr 10:00-19:00",
           "url":"https://github.com/magali24130/Nina-Carducci.git",
